--- a/Totoro/assets/styleRes.css
+++ b/Totoro/assets/styleRes.css
@@ -53,8 +53,9 @@
   line-height: 3em;  
 }
 
+
 /**input**/
-input {
+input,select {
 	outline: none;
 	border: none;
 }
@@ -80,7 +81,7 @@ input {
 
 
 /*---------------------------------------------*/
-input.input100 {
+input.input100, select.input100 {
   height: 40px;
   padding: 0 20px 0 23px;
 }
