--- a/Totoro/assets/styleRes.css
+++ b/Totoro/assets/styleRes.css
@@ -301,3 +301,113 @@ button:hover {
   -o-box-shadow: 0 10px 30px 0px #856514;;
   -ms-box-shadow: 0 10px 30px 0px #856514;;
 }
+
+.contact100-form-btn-green {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  min-width: 160px;
+  height: 42px;
+  background-color: #4CAF50;
+  border-radius: 10px;
+
+  font-family: JosefinSans-Bold;
+  font-size: 14px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  padding-top: 5px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+
+  box-shadow: 0 10px 30px 0px #5fb962;
+  -moz-box-shadow: 0 10px 30px 0px #5fb962;
+  -webkit-box-shadow: 0 10px 30px 0px #5fb962;
+  -o-box-shadow: 0 10px 30px 0px #5fb962;
+  -ms-box-shadow: 0 10px 30px 0px #5fb962;
+}
+
+.contact100-form-btn-green:hover {
+  background-color: #3e8e41;
+  box-shadow: 0 10px 30px 0px #3e8e41;
+  -moz-box-shadow: 0 10px 30px 0px #3e8e41;;
+  -webkit-box-shadow: 0 10px 30px 0px #3e8e41;;
+  -o-box-shadow: 0 10px 30px 0px #3e8e41;;
+  -ms-box-shadow: 0 10px 30px 0px #3e8e41;;
+}
+.contact100-form-btn-gray {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  min-width: 160px;
+  height: 42px;
+  background-color: #999999;
+  border-radius: 10px;
+
+  font-family: JosefinSans-Bold;
+  font-size: 14px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  padding-top: 5px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+
+  box-shadow: 0 10px 30px 0px #bbbbbb;
+  -moz-box-shadow: 0 10px 30px 0px #bbbbbb;
+  -webkit-box-shadow: 0 10px 30px 0px #bbbbbb;
+  -o-box-shadow: 0 10px 30px 0px #bbbbbb;
+  -ms-box-shadow: 0 10px 30px 0px #bbbbbb;
+}
+
+.contact100-form-btn-gray:hover {
+  background-color: #737373;
+  box-shadow: 0 10px 30px 0px #737373;
+  -moz-box-shadow: 0 10px 30px 0px #737373;;
+  -webkit-box-shadow: 0 10px 30px 0px #737373;;
+  -o-box-shadow: 0 10px 30px 0px #737373;;
+  -ms-box-shadow: 0 10px 30px 0px #737373;;
+}
+
+/** step **/
+/* Hide all steps by default: */
+.tab {
+  display: none;
+}
+
+/* Make circles that indicate the steps of the form: */
+.step {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbbbbb;
+  border: none;  
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0.5;
+  }
+  
+  .step.active {
+  opacity: 1;
+  }
+  
+  /* Mark the steps that are finished and valid: */
+  .step.finish {
+  background-color: #4CAF50;
+  }
