--- a/Totoro/assets/style.css
+++ b/Totoro/assets/style.css
@@ -106,13 +106,12 @@ div.selector option{ padding: 10px;}
 /*rooms and tariff*/
 .rooms{margin-bottom: 2em;}
 .rooms .info{padding: 1.5em;background-color: #E8E7E0;}
-.rooms img.img-responsive{width: 100%;}
-
+.rooms img.imgroom{width: 100%; height: 387px;}
 
 
 
 .room-features .amenitites li{margin-bottom: 1em;}
-.room-features .size-price{background-color: #C7C5BB;padding: 2em 0;text-align: center;color: #fff;height: 10.97em;line-height: 3em;}
+.room-features .size-price{background-color: #bab8ab;padding: 2em 0;text-align: center;color: #fff;height: 10.97em;line-height: 3em;}
 .room-features .size-price span{display: block;font-size: 2em;}
 
 
