update Room Reservation

--- a/Totoro/assets/styleRes.css
+++ b/Totoro/assets/styleRes.css
@@ -425,7 +425,7 @@ button:hover {
     display: inline-block;
   }
   
-  input[type="checkbox"][id^="cb"] {
+  input[type="radio"][id^="cb"] {
     display: none;
   }
   
@@ -478,4 +478,38 @@ button:hover {
     box-shadow: 0 0 5px #333;
     z-index: 0;
   }
-  /*** end room check ***/
+
+
+
+  input[name='idroom'] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+  }
+  input[name='idroom']:after {
+    font-family: 'FontAwesome';
+    display: inline-block;
+    text-align: center;
+    font-size: 80px;
+    content: '\f015';
+    padding: 20px 20px;
+    border-radius: 15px;
+    color: rgba(0, 0, 0, 0.4);
+    -webkit-transition: color 1s, -webkit-box-shadow 1s;
+    transition: color 1s, -webkit-box-shadow 1s;
+    transition: box-shadow 1s, color 1s;
+    transition: box-shadow 1s, color 1s, -webkit-box-shadow 1s;
+  }
+  input[name='idroom']:checked:after {
+    -webkit-box-shadow: 2px 2px 14px rgba(0, 0, 0, 0.4);
+            box-shadow: 2px 2px 14px rgba(0, 0, 0, 0.4);
+    color: rgba(6, 170, 47, 0.6);
+  }
+  input[name='idroom']:disabled:after {
+    color: #ff0000;
+  }
+    /*** end room check ***/
